fix: adjust font sizes and letter spacing

--- a/src/less/__mixins.less
+++ b/src/less/__mixins.less
@@ -77,7 +77,7 @@
     }
 
     &__cta {
-      font-size: 1.25rem; // mobile 20px
+      font-size: 1.125rem; // mobile 18px
 
       @media (min-width: @breakpoints__desktop--start) {
         font-size: 1.111112rem; // desktop 20px
